fixing overflow issues

--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,10 @@ html {
 }
 
 body {
-  height: 100%;
+  min-height: 100%;
   background-color: var(--dark-color);
   text-align: center;
+  position: relative;
 }
 
 body::before {
@@ -68,13 +69,14 @@ h1, p, .podcast, .form-btn {
   max-width: 28.125rem;
   margin: 0 auto;
   z-index: 1000;
+  padding-bottom: 2rem;
 }
 
 
 /* LOGO & TEXT */
 .logo-container {
-  margin-top: 3.875rem;
-  margin-bottom: 3.5625rem;
+  padding-top: 3.875rem;
+  padding-bottom: 3.5625rem;
 }
 
 .main-text {
